ERP and Cpanel chnages

--- a/client/views/adminIndex.html
+++ b/client/views/adminIndex.html
@@ -37,7 +37,7 @@
                 <ul class="nav navbar-nav navbar-right nav-admin" ng-if="isLoggedIn()">
                     <li class="profile-nav">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            <img src="images/user.png">{{displayName}}
+                            <img src="images/user.png">{{userName}}
                             <span class="caret"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#" ui-sref="myProfile">My Profile</a></li>
