--- a/client/views/partials/admin/services/editGpsDevice.html
+++ b/client/views/partials/admin/services/editGpsDevice.html
@@ -1,5 +1,5 @@
 <div class="col-xs-12 newCust" ng-controller="DeviceEditCrtl" ng-init="">
-    <h4>GPS / ERP Account</h4>
+    <h4>GPS Device Edit</h4>
     <div class="col-xs-12">
         <uib-accordion>
             <div uib-accordion-group class="panel-default mob-pad" is-open="status.isOpen">
@@ -32,35 +32,51 @@
 
                         </div>
 
-                        <div class="form-group styling-input-list">
+                       <!-- <div class="form-group styling-input-list">
                             <input type="text" class="form-control custom-form-control"
                                    ng-model="deviceDetails.imei"/>
                             <label class="focus-effect-for-input">Device Id</label>
-                        </div>
-                        <div class="form-group ">
+                        </div>-->
+                        <div class="form-group styling-input-list">
                             <select class="form-control custom-form-control" ng-model="deviceDetails.truckId"
                                     ng-change="getSelectedTruckDetails()">
                                 <option ng-repeat="truck in trucks" value="{{truck._id}}">{{truck.registrationNo}}
                                 </option>
                             </select>
-                            <!--<label class="focus-effect-for-input">Truck Reg no</label>-->
+                            <label class="focus-effect-for-input">Account Trucks*</label>
                         </div>
-                        <div class="form-group ">
-                            <select class="form-control custom-form-control" ng-model="deviceDetails.installedBy">
-                                <option value="" >Select Employee</option>
+                        <div class="form-group styling-input-list">
+                            <select class="form-control custom-form-control" ng-model="deviceDetails.assignedTo">
                                 <option ng-repeat="employee in employees" value="{{employee._id}}">
-                                    {{employee.displayName}}
+                                    {{employee.contactName}}
                                 </option>
                             </select>
+                            <label class="focus-effect-for-input">Employee Name</label>
                         </div>
-                        <div class="form-group">
+                       <!-- <div class="form-group">
                             <input type="text" class="form-control custom-form-control"
                                    ng-model="deviceDetails.address"/>
-                            <!--<label class="focus-effect-for-input">Address</label>-->
+                            &lt;!&ndash;<label class="focus-effect-for-input">Address</label>&ndash;&gt;
+                        </div>-->
+                        <div class="form-group styling-input-list">
+                            <input type="text" class="form-control custom-form-control"
+                                   ng-model="deviceDetails.imei"/>
+                            <label class="focus-effect-for-input">IMEI Number</label>
+
                         </div>
-                        <div class="form-group">
-                            <p class="smsenabled"><b>Is Damaged</b></p>
-                            <ul class="list-inline">
+                        <div class="form-group styling-input-list">
+                            <input type="text" class="form-control custom-form-control"
+                                   ng-model="deviceDetails.simPhoneNumber"/>
+                            <label class="focus-effect-for-input">SIM Number</label>
+                        </div>
+                        <div class="form-group styling-input-list">
+                            <input type="text" class="form-control custom-form-control"
+                                   ng-model="deviceDetails.simNumber"/>
+                            <label class="focus-effect-for-input">SIM Id</label>
+                        </div>
+                        <div class="ml-40">
+                            <p class="smsenabled dis-inline"><b>Is Damaged</b></p>
+                            <ul class="list-inline dis-inline">
                                 <li>
                                     <div class="radio">
                                         <label>
@@ -83,9 +99,9 @@
                                 </li>
                             </ul>
                         </div>
-                        <div class="form-group">
-                            <p class="smsenabled"><b>Is Active*:</b></p>
-                            <ul class="list-inline">
+                        <div class="ml-40">
+                            <p class="smsenabled dis-inline"><b>Is Active*:</b></p>
+                            <ul class="list-inline dis-inline">
                                 <li>
                                     <div class="radio">
                                         <label>
@@ -112,22 +128,6 @@
                     <div class="col-xs-12 col-sm-6">
                         <div class="form-group styling-input-list">
                             <input type="text" class="form-control custom-form-control"
-                                   ng-model="deviceDetails.imei"/>
-                            <label class="focus-effect-for-input">IMEI Number</label>
-
-                        </div>
-                        <div class="form-group styling-input-list">
-                            <input type="text" class="form-control custom-form-control"
-                                   ng-model="deviceDetails.simPhoneNumber"/>
-                            <label class="focus-effect-for-input">SIM Number</label>
-                        </div>
-                        <div class="form-group styling-input-list">
-                            <input type="text" class="form-control custom-form-control"
-                                   ng-model="deviceDetails.simNumber"/>
-                            <label class="focus-effect-for-input">SIM Id</label>
-                        </div>
-                        <div class="form-group styling-input-list">
-                            <input type="text" class="form-control custom-form-control"
                                    ng-model="deviceDetails.truck.insuranceExpiry"/>
                             <label class="focus-effect-for-input">Insurance Expiry</label>
                         </div>
@@ -146,9 +146,9 @@
                                    ng-model="deviceDetails.insuranceAmount"/>
                             <label class="focus-effect-for-input">Insurance Amount</label>
                         </div>
-                        <div class="form-group">
-                            <p class="smsenabled"><b>NP Available</b></p>
-                            <ul class="list-inline">
+                        <div class="ml-40">
+                            <p class="smsenabled dis-inline"><b>NP Available</b></p>
+                            <ul class="list-inline dis-inline">
                                 <li>
                                     <div class="radio">
                                         <label>
@@ -204,12 +204,12 @@
                         <li class="styling-input-list col-sm-4 form-group">
                             <input type="text" class="form-control order-form-control"
                                    ng-model="GPSPlanDEtails.amount"/>
-                            <label class="focus-effect-for-input">Amount</label>
+                            <label class="order-effect-for-input">Amount</label>
                         </li>
                         <li class="styling-input-list form-group col-sm-4">
                             <input type="text" class="form-control order-form-control"
                                    ng-model="GPSPlanDEtails.remark"/>
-                            <label class="focus-effect-for-input">Remark</label>
+                            <label class="order-effect-for-input">Remark</label>
                         </li>
                         <button class="btn btn-success" ng-click="assignGPSPlan()">Assign</button>
                     </ul>
