--- a/client/views/partials/expenses/expenses.html
+++ b/client/views/partials/expenses/expenses.html
@@ -59,7 +59,7 @@
                 maintanence.attrs.expenseName }}
             </td>
             <td data-title="'Amount'" sortable="'totalAmount'" class="clickable-item">{{
-                maintanence.totalAmount }}
+                maintanence.totalAmount | number:2 }}
 
             </td>
             <td data-title="'Mode'" sortable="'mode'" class="clickable-item">{{
