--- a/client/views/partials/reports/payableByPartyName.html
+++ b/client/views/partials/reports/payableByPartyName.html
@@ -131,8 +131,8 @@
                         <tfoot>
                         <tr>
                             <th >Total</th>
-                            <th>{{totalAmount}}</th>
-                            <th>{{totalPaid}}</th>
+                            <th>{{totalAmount | number:2 }}</th>
+                            <th>{{totalPaid | number:2}}</th>
                             <th></th>
                             <th></th>
                         </tr>
