--- a/client/views/partials/reports/revenueByVehicles.html
+++ b/client/views/partials/reports/revenueByVehicles.html
@@ -188,9 +188,9 @@
                 <tfoot>
                 <tr>
                     <th>Total</th>
-                    <th>{{totalRevenue.grossFreight}}</th>
-                    <th>{{totalRevenue.grossExpenses}}</th>
-                    <th>{{totalRevenue.grossRevenue}}</th>
+                    <th>{{totalRevenue.grossFreight | number:2}}</th>
+                    <th>{{totalRevenue.grossExpenses | number:2}}</th>
+                    <th>{{totalRevenue.grossRevenue | number:2}}</th>
                 </tr>
                 </tfoot>
             </table>
