--- a/client/views/partials/reports/revenueByvehicleId.html
+++ b/client/views/partials/reports/revenueByvehicleId.html
@@ -129,8 +129,8 @@
                 <tfoot>
                 <tr>
                     <th colspan="3">Total</th>
-                    <th>{{totalRevenueByVehicleId.totalFreight}}</th>
-                    <th>{{totalRevenueByVehicleId.totalExpenses}}</th>
+                    <th>{{totalRevenueByVehicleId.totalFreight | number:2}}</th>
+                    <th>{{totalRevenueByVehicleId.totalExpenses | number:2}}</th>
                 </tr>
                 </tfoot>
             </table>
