--- a/client/views/partials/trips/tripsList.html
+++ b/client/views/partials/trips/tripsList.html
@@ -61,7 +61,7 @@
                 trips.attrs.fullName }}
             </td>
             <td data-title="'Freight'" sortable="'freightAmount'" class="clickable-item">{{
-                trips.freightAmount }}
+                trips.freightAmount | number:2 }}
             </td>
           <!--  <td data-title="'Trip Lane'" sortable="'tripLane'" class="clickable-item">{{
                 trips.tripLane }}
