--- a/client/adminCss/adminStyles.css
+++ b/client/adminCss/adminStyles.css
@@ -33,6 +33,9 @@
 .mb-10 {
     margin-bottom: 10px;
 }
+.ml-40{
+    margin-left: 40px;
+}
 
 .pt-5 {
     padding-top: 5px;
@@ -1401,6 +1404,9 @@ height: 42px !important;
 }
 .select2-dropdown-open .ac-form-control{
     width: 100% !important;
+}
+.dis-inline{
+    display: inline-block;
 }
 
 /* Responsive Design */
