--- a/client/views/partials/admin/administrators/addUpdateEmployee.html
+++ b/client/views/partials/admin/administrators/addUpdateEmployee.html
@@ -3,51 +3,54 @@
     <div class="col-xs-12">
         <div class="row">
             <div class="col-xs-12 col-sm-6">
-                <div class="form-group">
-                    <input type="text" class="form-control custom-form-control" name="firstName"
-                           ng-model="employee.firstName" placeholder="First Name *"/>
+                <div class="form-group styling-input-list">
+                    <input type="text" class="form-control custom-form-control"
+                           ng-model="employee.firstName"/>
+                    <label class="focus-effect-for-input">First Name*</label>
                 </div>
-                <div class="form-group">
-                    <input type="text" class="form-control custom-form-control" name="lastName"
-                           ng-model="employee.lastName" placeholder="Last Name *"/>
+                <div class="form-group styling-input-list">
+                    <input type="text" class="form-control custom-form-control"
+                           ng-model="employee.lastName"/>
+                    <label class="focus-effect-for-input">Last Name*</label>
                 </div>
-                <div class="form-group">
-                    <input type="text" class="form-control custom-form-control" name="password"
-                           ng-model="employee.password" placeholder="Password *"/>
+                <div class="form-group styling-input-list">
+                    <input type="text" class="form-control custom-form-control"
+                           ng-model="employee.userName"/>
+                    <label class="focus-effect-for-input">User Name*</label>
                 </div>
-                <div class="form-group">
-                    <input type="text" class="form-control custom-form-control" name="confirmPassword"
-                           ng-model="employee.confirmPassword" placeholder="confirmPassword *"/>
+                <div class="form-group styling-input-list">
+                    <input type="text" class="form-control custom-form-control"
+                           ng-model="employee.password"/>
+                    <label class="focus-effect-for-input">Password*</label>
                 </div>
-                <div class="form-group">
-                    <input type="text" class="form-control custom-form-control" name="contactAddress"
-                           ng-model="employee.contactAddress" placeholder="Address"/>
+                <div class="form-group styling-input-list">
+                    <input type="text" class="form-control custom-form-control"
+                           ng-model="employee.confirmPassword"/>
+                    <label class="focus-effect-for-input">confirmPassword*</label>
                 </div>
-                <div class="form-group">
-                    <input type="text" class="form-control custom-form-control" name="city" ng-model="employee.city"
-                           placeholder="City"/>
+                <div class="form-group styling-input-list">
+                    <input type="text" class="form-control custom-form-control"
+                           ng-model="employee.contactAddress"/>
+                    <label class="focus-effect-for-input">Address*</label>
                 </div>
-                <div class="form-group">
-                    <input type="text" class="form-control custom-form-control" name="state" ng-model="employee.state"
-                           placeholder="State"/>
+                <div class="form-group styling-input-list">
+                    <input type="text" class="form-control custom-form-control" ng-model="employee.city"/>
+                    <label class="focus-effect-for-input">City</label>
+                </div>
+                <div class="form-group styling-input-list">
+                    <input type="text" class="form-control custom-form-control" ng-model="employee.state"/>
+                    <label class="focus-effect-for-input">State</label>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-6">
-                <div class="form-group">
-                    <input type="text" class="form-control custom-form-control" name="email" ng-model="employee.email"
-                           placeholder="Email *"/>
+                <div class="form-group styling-input-list">
+                    <input type="text" class="form-control custom-form-control" ng-model="employee.email"/>
+                    <label class="focus-effect-for-input">Email*</label>
                 </div>
-                <div class="form-group">
-                    <input type="number" class="form-control custom-form-control" name="mobile"
-                           ng-model="employee.contactPhone"
-                           placeholder="Mobile *"/>
-                    <!--input type="text" class="form-control custom-form-control" name="mobile"
-                           ng-model="employee.contactPhone[$index]" ng-pattern="/^[0-9]/"
-                           placeholder="Mobile {{$index+1}} *"/>
-                    <span class="plus-pos" ng-show="$index >= 1"> <i class="fa fa-times-circle clr-red"
-                                                                     ng-click="removeNumber()"></i></span>
-                    <span class="plus-pos" ng-show="$index == 0"><i class="fa fa-plus-square" aria-hidden="true"
-                                                                    ng-click="addNumber()"></i></span-->
+                <div class="form-group styling-input-list">
+                    <input type="number" class="form-control custom-form-control"
+                           ng-model="employee.contactPhone"/>
+                    <label class="focus-effect-for-input">Mobile No*</label>
                 </div>
                 <div class="form-group">
                     <select class="form-control custom-form-control" ng-model="employee.adminRoleId">
@@ -57,13 +60,15 @@
                 </div>
                 <div class="form-group">
                     <select class="form-control custom-form-control" ng-model="employee.franchiseId">
-                        <option value="" selected>Select Franchise *</option>
+                        <option value="" selected>Select Franchise</option>
                         <option ng-repeat="franchise in franchises" value="{{franchise._id}}">{{franchise.fullName}}</option>
                     </select>
                 </div>
                 <div class="form-group">
+                    <label>Identity Proof* :
                     <input type="file" ngf-select class="form-control custom-form-control"
                            ng-model="employee.newProfilePic" name="profilePic" ngf-pattern="'image/*'" ngf-accept="'image/*'" ngf-resize="{width: 100, height: 100}" />
+                    </label>
                     <img src="{{employee.profilePic}}" ng-if="employee.profilePic">
                 </div>
                 <div class="form-group">
