--- a/client/views/partials/admin/services/gpsDevices.html
+++ b/client/views/partials/admin/services/gpsDevices.html
@@ -62,7 +62,7 @@
                     {{device.createdAt | date:'dd-MM-yyyy'}}
                 </td>
                 <td data-title="'Installed By'" sortable="'installedBy'" class="clickable-item">
-                    {{device.installedBy.userName }}
+                    {{device.assignedTo.displayName}}
                 </td>
 
                 <!-- <td data-title="'Latest Loc'" class="clickable-item">
