--- a/client/views/partials/reports/expenseByVehicleId.html
+++ b/client/views/partials/reports/expenseByVehicleId.html
@@ -1,6 +1,6 @@
 <div class="col-xs-12 pall-zero" ng-controller="dashboardController" ng-init="getexpenseByVehicleId();">
     <div class="col-sm-3 col-xs-12">
-        <div class="reports-panel payments" ui-sref="reports`">
+        <div class="reports-panel payments" ui-sref="reports">
             <div class="reports-image">
                 <figure>
                     <img src="images/revenue-report.png">
@@ -128,7 +128,7 @@
                 <tfoot>
                 <tr>
                     <th colspan="3">Total</th>
-                    <th >{{totalExpenses}}</th>
+                    <th >{{totalExpenses | number:2}}</th>
 
 
                 </tr>
