--- a/client/views/partials/reports/expenseByVehicles.html
+++ b/client/views/partials/reports/expenseByVehicles.html
@@ -188,10 +188,10 @@
                 <tfoot>
                 <tr>
                     <th>Total</th>
-                    <th>{{totalExpenses.totalDieselExpense}}</th>
-                    <th>{{totalExpenses.totaltollExpense}}</th>
-                    <th>{{totalExpenses.totalmExpense}}</th>
-                    <th>{{totalExpenses.totalmisc}}</th>
+                    <th>{{totalExpenses.totalDieselExpense | number:2}}</th>
+                    <th>{{totalExpenses.totaltollExpense | number:2}}</th>
+                    <th>{{totalExpenses.totalmExpense | number:2}}</th>
+                    <th>{{totalExpenses.totalmisc | number:2}}</th>
                 </tr>
                 </tfoot>
             </table>
