--- a/client/views/partials/reports/receivableByParties.html
+++ b/client/views/partials/reports/receivableByParties.html
@@ -186,9 +186,9 @@
                 <tfoot>
                 <tr>
                     <th colspan="2">Total</th>
-                    <th>{{partiesAmount.grossFreight}}</th>
-                    <th>{{partiesAmount.grossExpenses}}</th>
-                    <th>{{partiesAmount.grossDue}}</th>
+                    <th>{{partiesAmount.grossFreight | number:2}}</th>
+                    <th>{{partiesAmount.grossExpenses | number:2}}</th>
+                    <th>{{partiesAmount.grossDue | number:2}}</th>
                 </tr>
                 </tfoot>
             </table>
