--- a/client/views/partials/reports/receivableByPartyName.html
+++ b/client/views/partials/reports/receivableByPartyName.html
@@ -127,8 +127,8 @@
             <tfoot>
             <tr>
                 <th colspan="3">Total</th>
-                <th>{{amountPaid.totalFreight}}</th>
-                <th>{{amountPaid.totalPaid}}</th>
+                <th>{{amountPaid.totalFreight | number:2}}</th>
+                <th>{{amountPaid.totalPaid | number:2}}</th>
             </tr>
             </tfoot>
         </table>
