--- a/client/views/partials/admin/services/editGpsDevice.html
+++ b/client/views/partials/admin/services/editGpsDevice.html
@@ -174,8 +174,9 @@
                                    ng-model="deviceDetails.npExpiry"/>
                             <label class="focus-effect-for-input">NP Expire</label>
                         </div>
+                        <div class="custom-form-control"><b>Latest Location:</b> <br> {{deviceDetails.attrs.latestLocation.address}}</div>
                     </div>
-                    <div>Current Location: MR11 Rd, Dewas Naka, Lasudia Mori, Indore, Madhya Pradesh 453771, India</div>
+
 
             </div>
         </uib-accordion>
