--- a/client/views/partials/admin/services/gpsDevices.html
+++ b/client/views/partials/admin/services/gpsDevices.html
@@ -148,6 +148,6 @@
     </div>
     <div class="modal-footer">
         <button class="btn btn-primary" type="button" ng-click="transferDevices()">Submit</button>
-        <button class="btn btn-danger" type="button" ng-click="close()">Cancel</button>
+        <button class="btn btn-danger" type="button" ng-click="cancel();">Cancel</button>
     </div>
 </script>
