--- a/client/views/partials/admin/customers/addUpdateCommissionAgent.html
+++ b/client/views/partials/admin/customers/addUpdateCommissionAgent.html
@@ -24,6 +24,16 @@
                                    ng-model="commissionAgent.firstName"/>
                             <label class="focus-effect-for-input">Full Name*</label>
                         </div>
+                        <div class="form-group styling-input-list">
+                            <input type="text" class="form-control custom-form-control" name="userName"
+                                   ng-model="commissionAgent.userName"/>
+                            <label class="focus-effect-for-input">User Name*</label>
+                        </div>
+                        <div class="form-group styling-input-list">
+                            <input type="text" class="form-control custom-form-control" name="password"
+                                   ng-model="commissionAgent.password"/>
+                            <label class="focus-effect-for-input">Password*</label>
+                        </div>
                     </div>
                     <div class="col-xs-12 col-sm-6">
                         <div class="form-group pos-relative styling-input-list">
