--- a/client/views/index.html
+++ b/client/views/index.html
@@ -114,6 +114,8 @@
 <script src="dist/components/components.min.js"></script>
 <script src="http://maps.google.com/maps/api/js?key=AIzaSyAlxdJl-H99_0Zhq4a78CeRAqQShx1IXC0&libraries=place"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-sanitize.js"></script>
+<!--Date Time Picker --->
+<script src="components/bootstrap-ui-datetime-picker/dist/datetime-picker.min.js"></script>
 <!--app-->
 <!--<script src="js/app.js"></script>-->
 
