--- a/client/views/partials/gps/listView.html
+++ b/client/views/partials/gps/listView.html
@@ -25,35 +25,35 @@
             <div class="col-xs-12 mt-25">
                 <table class="table table-bordered table-striped table-condensed table-hover" ng-table="partyParams">
                     <tr style="text-align: center;" ng-repeat="truck in trucksData">
-                        <td data-title="'Date & Time'" sortable="'partyName'" class="clickable-item col-sm-2">
+                        <td data-title="'Date & Time'" sortable="'createdAt'" class="clickable-item col-sm-2">
                             <a href="#"></a>
                             {{truck.attrs.latestLocation.createdAt |date : "dd/MM/y HH:mm" }}
                         </td>
-                        <td data-title="'V Num'" sortable="'partyName'" class="clickable-item col-sm-1">
+                        <td data-title="'Vehicle Num'" sortable="'registrationNo'" class="clickable-item col-sm-1">
                             <a href="#"></a>
-                            {{truck.registrationNo}}
+                            {{truck.registrationNo | uppercase}}
                         </td>
-                        <td data-title="'Location'" sortable="'partyContact'" class="clickable-item col-sm-2">
+                        <td data-title="'Location'" sortable="'address'" class="clickable-item col-sm-2">
                             {{truck.attrs.latestLocation.address}}
                         </td>
-                        <td data-title="'Speed'" sortable="'totalFright'" class="clickable-item col-sm-1">
-                            {{truck.attrs.latestLocation.speed}}
+                        <td data-title="'Speed'" sortable="'speed'" class="clickable-item col-sm-1">
+                            {{truck.attrs.latestLocation.speed | number:0}}
                         </td>
-                        <td data-title="'Odo Meter'" sortable="'totalPayment'" class="clickable-item col-sm-2">
-                            150KM
+                        <td data-title="'Odo Meter'" sortable="'totalDistance'" class="clickable-item col-sm-2">
+                            {{truck.attrs.latestLocation.totalDistance | number:0}}
                         </td>
-                        <td data-title="'Driver'" sortable="'totalPayment'" class="clickable-item col-sm-1">
+                        <td data-title="'Driver'" sortable="'driverId'" class="clickable-item col-sm-1">
                             {{truck.driverId}}
                         </td>
-                        <td data-title="'Fuel'" sortable="'totalPayment'" class="clickable-item col-sm-1">
+                        <!--<td data-title="'Fuel'" sortable="'totalPayment'" class="clickable-item col-sm-1">
                             NA
-                        </td>
+                        </td>-->
                         <td data-title="'Load'" sortable="'totalPayment'" class="clickable-item col-sm-2">
                          <input type="checkbox" /> Looking For Load
                         </td>
-                        <td data-title="'Action'" sortable="'totalPayment'" class="clickable-item col-sm-1">
+                        <!--<td data-title="'Action'" sortable="'totalPayment'" class="clickable-item col-sm-1">
                             <i class="fa fa-edit" style="font-size: 20px;"></i>
-                        </td>
+                        </td>-->
                     </tr>
                     <!-- <tr ng-if="!parties || parties.length === 0">
                          <td colspan="8">No Records exist.</td>
