--- a/client/views/partials/gps/trackView.html
+++ b/client/views/partials/gps/trackView.html
@@ -1,5 +1,5 @@
 <div class="col-xs-12 gpsListView" ng-controller="TruckTrackingController">
-    <div class="col-xs-12">
+    <div class="">
         <div class="lisk-block col-xs-12">
             <div class="col-xs-12">
                 <ul class="list-inline">
@@ -16,7 +16,8 @@
 
                     <li class=""><a href="#" class="map" ui-sref="listView">List view</a></li>
 
-                    <li  class="mar-rgt-space pull-right map-wid"><a href="#" class="map" ui-sref="gpsReports">Reports</a></li>
+                    <li class="mar-rgt-space pull-right map-wid"><a href="#" class="map"
+                                                                    ui-sref="gpsReports">Reports</a></li>
 
                 </ul>
             </div>
@@ -26,32 +27,54 @@
         <div class="row mt-20">
             <div class="col-xs-9">
                 <div>
-                    <div  id="map" style="width: 100%; height: 500px;"></div>
+                    <div id="map" style="width: 100%; height: 500px;"></div>
                 </div>
             </div>
-            <div class="col-xs-3">
-                <div class="row mt-10">
-                    <label>Truck Reg No :</label>
-                    <label>{{truckTrackingParams.regNo}} </label>
+            <div class="col-xs-3 map-track">
+                <div class="mt-10">
+                    <span>Truck Reg No :</span>
+                    <span><b style="color:#000;">{{truckTrackingParams.regNo}}</b> </span>
                 </div>
-                <div class="row">
+                <div class="mt-20">
                     <label>Start Date</label>
-                    <date-picker class="'textfield'" ban-future="'banFutureDate'" ng-model="truckTrackingParams.startDate"></date-picker>
+                    <!--<date-picker class="'textfield'" ban-future="'banFutureDate'" ng-model="truckTrackingParams.startDate"></date-picker>-->
+                    <div class="form-group">
+                        <p class="input-group">
+                            <input type="text" class="form-control" datetime-picker="MM/dd/yyyy HH:mm"
+                                   is-open="pickerStart.open"
+                                   ng-model="truckTrackingParams.startDate" datepicker-options="options"/>
+                            <span class="input-group-btn">
+            <button type="button" class="btn btn-default" ng-click="openCalendarStartDate($event, 'pickerStart')"><i
+                    class="fa fa-calendar"></i></button>
+          </span>
+                        </p>
+                    </div>
                 </div>
-                <div class="row">
+                <div class="">
                     <label>End Date</label>
-                    <date-picker class="'textfield'" ban-future="'banFutureDate'" ng-model="truckTrackingParams.endDate"></date-picker>
+                    <!-- <date-picker class="'textfield'" ban-future="'banFutureDate'" ng-model="truckTrackingParams.endDate"></date-picker>-->
+                    <div class="form-group">
+                        <p class="input-group">
+                            <input type="text" class="form-control" datetime-picker="MM/dd/yyyy HH:mm"
+                                   is-open="pickerEnd.open"
+                                   ng-model="truckTrackingParams.endDate" datepicker-options="options"/>
+                            <span class="input-group-btn">
+            <button type="button" class="btn btn-default" ng-click="openCalendarEndDate($event, 'pickerEnd')"><i
+                    class="fa fa-calendar"></i></button>
+          </span>
+                        </p>
+                    </div>
                 </div>
                 <!--<center>-->
-                <div class="row">
-
-                    <input type="button" ng-click="getTruckPositions()" class="btn btn-danger mt-20" value="Track"/>
-                    <input type="button" ng-click="animate()" class="btn btn-danger mt-20" value="Play"/>
-                    <input type="button" ng-click="stopAnimation()" class="btn btn-danger mt-20" value="Stop"/>
-                    <input type="button" ng-click="downloadReport()" class="btn btn-danger mt-20" value="Download">
+                <div class="mt-20">
+                    <input type="button" ng-click="getTruckPositions()" class="btn btn-danger" value="Track"/>
+                    <input type="button" ng-click="animate()" class="btn btn-danger" value="Play"/>
+                    <input type="button" ng-click="stopAnimation()" class="btn btn-danger" value="Stop"/>
+                    <input type="button" ng-click="downloadReport()" class="btn btn-danger" value="Download">
                     <div class="checkbox" ng-show="distance">
                         <label>
-                            <input type="checkbox" ng-change="renderStops()" ng-model="truckTrackingParams.showOnlyStops">
+                            <input type="checkbox" ng-change="renderStops()"
+                                   ng-model="truckTrackingParams.showOnlyStops">
                             <span class="cr"><i class="cr-icon fa fa-check"></i></span>
                             : Only Stops
                         </label>
@@ -69,7 +92,7 @@
                             Distance Travelled : <b>{{distance| number:2}}</b>
                         </li>
                         <li class="list-group-item">
-                           Top Speed : <b>{{topSpeed | number:2}}</b>
+                            Top Speed : <b>{{topSpeed | number:2}}</b>
                         </li>
                         <li class="list-group-item">
                             Average Speed : <b>{{averageSpeed | number : 2}}</b>
@@ -84,15 +107,16 @@
                     <ul class="list-group" ng-show="averageSpeed">
 
                         <li class="list-group-item">
-                            <label>                         Pushpin Legend
+                            <label> Pushpin Legend
                             </label>
                         </li>
 
                         <li class="list-group-item">
-                    <img height="25" width="25" src="/images/green_marker.svg"> <label> - Start Position </label>
+                            <img height="25" width="25" src="/images/green_marker.svg"> <label> - Start
+                            Position </label>
                         </li>
                         <li class="list-group-item">
-                    <img height="25" width="25" src="/images/red_marker.svg"> <label> - End Position </label>
+                            <img height="25" width="25" src="/images/red_marker.svg"> <label> - End Position </label>
                         </li>
                     </ul>
                 </div>
